sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: '<-' expected but ')' found.
for(i -> getNombreVAleurs()-2 to 0){
                                  ^AlgBubbleSort2:12: error: illegal start of simple expression
}
^